# coding_theory

./: .gitignore  CMakeLists.txt  main.cpp  testing.py  tests.cpp
coding/: coding.h  util.h
coding/AC/: CMakeLists.txt  encoder.h  main.cpp  main1_entropy.cpp  model.h  stats.h
coding/BlockHuffman/: CMakeLists.txt  bit_vector.cpp  bit_vector.h  entropy.cpp  entropy.h  huffman_tree.cpp  huffman_tree.h  preprocess.cpp  preprocess.h  utils.cpp  utils.h
coding/BlockHuffman/decoder/: decoder.cpp  decoder.h
coding/BlockHuffman/encoder/: encoder.cpp  encoder.h
coding/RANS/: rans.h  rans_adaptive.h
coding/util/: bit_stream.h
